keeping validateLogCalls and forbidden apis check happy